完成会话页面布局

--- a/pc/index.html
+++ b/pc/index.html
@@ -7,7 +7,7 @@
     <title>Arco Design Pro - 开箱即用的中台前端/设计解决方案</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="root-app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
