--- a/pc/index.html
+++ b/pc/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app" class="root-app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <script src="/src/assets/temp/iconfont.js"></script>
   </body>
 </html>
